<package format="2">

  <name>olelidar</name>
  <version>3.0.0</version>
  <description>
    Basic ROS support for the olei 2D LIDARs.
  </description>
  <maintainer email="emanuele.montemurro@olei.com">Emanuele</maintainer>
  <author>Emanuele</author>
  <license>GNU General Public License V3.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>
  <depend>curlpp-dev</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>laser_geometry</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <test_depend>rosunit</test_depend>
  <depend>diagnostic_updater</depend>



  <export>
    <!--<nodelet plugin="${prefix}/nodelet_plugins.xml"/>-->
  </export>

</package>
